--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -52,16 +52,16 @@
       lv = microphone.sound_level()
       if 0 <= lv <70:
           radio.send('1')
-          sleep(1000)
+          sleep(200)
       elif 70 <= lv <125:  
           radio.send('2')
-          sleep(1000)
+          sleep(200)
       elif 125 <= lv <190:
           radio.send('3')
-          sleep(1000)
+          sleep(200)
       elif 190 <= lv <255:
           radio.send('4')
-          sleep(1000)
+          sleep(200)
       else:
           display.clear()
   ```
@@ -76,19 +76,34 @@
   
   while True:
       signal = radio.receive()
-      lv= radio.receive()
       if signal == '1':
-          print('sound_level:{}, silent'.format(lv))
-          sleep(1000)
+          display.show(Image('00000:'
+                             '00000:'
+                             '00000:'
+                             '00900:'
+                             '99999'))
+          sleep(500)
       elif signal == '2':
-          print('sound_level:{}, silent'.format(lv))
-          sleep(1000)
+          display.show(Image('00000:'
+                             '00000:'
+                             '00900:'
+                             '09990:'
+                             '99999'))
+          sleep(500)
       elif signal == '3':
-          print('sound_level:{}, silent'.format(lv))
-          sleep(1000)
+          display.show(Image('00000:'
+                             '00900:'
+                             '09990:'
+                             '99999:'
+                             '99999'))
+          sleep(500)
       elif signal == '4':
-          print('sound_level:{}, silent'.format(lv))
-          sleep(1000)
+          display.show(Image('25952:'
+                             '09990:'
+                             '99999:'
+                             '99999:'
+                             '99999'))
+          sleep(500)
       else:
           display.clear()
   ```
