--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -38,7 +38,7 @@
         else:
             display.clear()
     ```  
-### 실습제목입력
+### 원격 소음 측정기 만들기(while문과 if문 조합)
 * 샘플코드_02-1
   - 송신(Send)코드
   ```
@@ -107,21 +107,14 @@
       else:
           display.clear()
   ```
-### 실습제목입력
-* 샘플코드_03
-```
-```
 
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
+#
 ```
 
 * 샘플코드_02
-```
-```
-
-* 샘플코드_03
 ```
 ```
 
