--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -110,13 +110,14 @@
 
 ## 이해하기 샘플코드
 * 샘플코드_01
-```
-#
-```
+  - 지진 및 온도 감지계 만들기
+  ```
+  ```
 
 * 샘플코드_02
-```
-```
+  - 간단한 스마트 화분 매커니즘 이해하기(조도-LED / 온도-알림)
+  ```
+  ```
 
 ## 적용하기 샘플코드
 * 샘플코드_01
