--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -111,10 +111,28 @@
 ## 이해하기 샘플코드
 * 샘플코드_01
   - 지진 및 온도 감지계 만들기
+  - 송신(Send) 코드
   ```
+  from microbit import *
+  import radio
+  
+  radio.config(group=23, power=7)
+  radio.on()
+  
+  x_strength = accelerometer.get_x()
+  
+  while True:
+      while accelerometer.was_gesture('shake'):
+          print('흔들림 값을 보내고 있습니다.')
+          radio.send('shake')
+          sleep(500)
+        
+        if 
+    
   ```
 
 * 샘플코드_02
+  - 수신(Receive) 코드
   - 간단한 스마트 화분 매커니즘 이해하기(조도-LED / 온도-알림)
   ```
   ```
