--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -122,13 +122,23 @@
   x_strength = accelerometer.get_x()
   
   while True:
+      temp = str(temperature())
+      
+      print('온도를 측정하고 있습니다.')
+      radio.send(temp)
+      sleep(500)
+      
       while accelerometer.was_gesture('shake'):
+          x_strength = accelerometer.get_x()
+          y_strength = accelerometer.get_y()
+          z_strength = accelerometer.get_z()
+          
           print('흔들림 값을 보내고 있습니다.')
           radio.send('shake')
           sleep(500)
-        
-        if 
-    
+  
+          if x_strength == 0 and y_strength == 0  and z_strength == 0:
+              break
   ```
 
 * 샘플코드_02
