--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -142,28 +142,19 @@
    ```
   from microbit import *
   import radio
-    
+   
   radio.config(group=23, power=7)
-  radio.on()
-    
+   
   while True:
-      temp = str(temperature())
-        
-      print('온도를 측정하고 있습니다.')
-      radio.send(temp)
-      sleep(500)
-        
-      while accelerometer.was_gesture('shake'):
-          x_strength = accelerometer.get_x()
-          y_strength = accelerometer.get_y()
-          z_strength = accelerometer.get_z()
-           
-          print('흔들림 값을 보내고 있습니다.')
-          radio.send('shake')
-          sleep(500)
-    
-          if x_strength == 0 and y_strength == 0  and z_strength == 0:
-              break
+     if radio.receive() == 'shake':
+         print('지진이 발생하고 있습니다.')
+         display.scroll('Earthquake')
+       
+     if button_a.was_pressed():
+         temp = radio.receive()
+         print('온도를 측정합니다. 온도 값은 {}도 입니다.'.format(temp))
+         display.scroll(str(temp))
+         sleep(500)
    ```
 
 * 샘플코드_02
