--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -157,9 +157,14 @@
    ```
 
 * 샘플코드_02
-  - 수신(Receive) 코드
   - 간단한 스마트 화분 매커니즘 이해하기(조도-LED / 온도-알림)
+  - 송신(Send) 코드
   ```
+  
+  ```
+  - 수신(Receive) 코드
+  ```
+  
   ```
 
 ## 적용하기 샘플코드
