--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -160,7 +160,35 @@
   - 간단한 스마트 화분 매커니즘 이해하기(조도-LED / 온도-알림)
   - 송신(Send) 코드
   ```
+  from microbit import *
+  import radio
+      
+  radio.config(group=22, power=7) #그룹 번호 번경
+  radio.on()
+  num=0
   
+  while True:
+  
+      light=display.read_light_level()
+      temp=temperature()
+  
+      while num == 0:
+          if 0 <= display.read_light_level() < 50:
+              radio.send('1')
+              sleep(500)
+              num == 1
+              if num == 1:
+                  break
+          
+          elif 50<= display.read_light_level():
+              radio.send('2')
+              sleep(500)
+              num == 1
+              if num == 1:
+                  break
+
+    
+    
   ```
   - 수신(Receive) 코드
   ```
