--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -161,34 +161,51 @@
   - 송신(Send) 코드
   ```
   from microbit import *
-  import radio
-      
-  radio.config(group=22, power=7) #그룹 번호 번경
-  radio.on()
-  num=0
-  
-  while True:
-  
-      light=display.read_light_level()
-      temp=temperature()
-  
-      while num == 0:
-          if 0 <= display.read_light_level() < 50:
-              radio.send('1')
-              sleep(500)
-              num == 1
-              if num == 1:
-                  break
-          
-          elif 50<= display.read_light_level():
-              radio.send('2')
-              sleep(500)
-              num == 1
-              if num == 1:
-                  break
+import radio
+    
+radio.config(group=22, power=7) #그룹 번호 번경
+radio.on()
+num=0
 
+while True:
+
+    light=display.read_light_level()
+    temp=temperature()
+
+    while num == 0:
+        if 0 <= display.read_light_level() < 50:
+            radio.send('0')
+            sleep(500)
+            num = 1
+            if num == 1:
+                break
+        
+        elif 50<= display.read_light_level():
+            radio.send('1')
+            sleep(500)
+            num = 1
+            if num == 1:
+                break
     
-    
+    while num==1:
+        if 0 <= temp < 5:
+            radio.send('3')
+            sleep(500)
+            num = 0
+            if num == 0:
+                break
+        elif 5 <= temp < 24:
+            radio.send('4')
+            sleep(500)
+            num = 0
+            if num == 0:
+                break
+        elif 24 <= temp <35:
+            radio.send('5')
+            sleep(500)
+            num = 0
+            if num == 0:
+                break
   ```
   - 수신(Receive) 코드
   ```
