--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -206,6 +206,13 @@
               num = 0
               if num == 0:
                   break
+          else:
+              radio.send('5')
+              sleep(500)
+              num = 0
+              if num == 0:
+                  break
+      
   ```
   - 수신(Receive) 코드
   ```
