--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -216,7 +216,49 @@
   ```
   - 수신(Receive) 코드
   ```
+  from microbit import *
+  import radio
+      
+  radio.config(group=22, power=7) #그룹 번호 번경
+  radio.on()
+  num=0
   
+  while True:
+      message = radio.receive()
+      if message == '0':
+          print('어둡습니다. 전면 LED를 켭니다.')
+          display.show(Image('99999:'
+                             '99999:'
+                             '99999:'
+                             '99999:'
+                             '99999'))
+      elif message == '1':
+          print('밝습니다. 전면 LED를 끕니다.')
+          display.show(Image('00000:'
+                             '00000:'
+                             '00000:'
+                             '00000:'
+                             '00000'))
+      elif message == '2':
+          print('온도가 0도에서 5도 사이입니다. 조금 온도를 올려주세요.')
+          display.show(Image.MEH)
+          sleep(500)
+          
+      elif message == '3':
+          print('온도가 5도에서 24도 사이입니다. 식물이 잘 자라는 온도입니다.')
+          display.show(Image.GIRAFFE)
+          sleep(500)
+          
+      elif message == '4':
+          print('온도가 24도에서 35도 사이입니다.1시간 뒤 물을 주세요')
+          display.show(Image.DUCK)
+          sleep(500)
+          
+          
+      elif message == '5':
+          print('온도가 너무 높아요. 식물이 죽어가요, 옮겨주세요')
+          display.show(Image.GHOST)
+          sleep(500)
   ```
 
 ## 적용하기 샘플코드
