--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -218,6 +218,7 @@
   ```
   from microbit import *
   import radio
+  import music
       
   radio.config(group=22, power=7) #그룹 번호 번경
   radio.on()
@@ -241,23 +242,23 @@
                              '00000'))
       elif message == '2':
           print('온도가 0도에서 5도 사이입니다. 조금 온도를 올려주세요.')
-          display.show(Image.MEH)
+          music.play(music.RINGTONE)
           sleep(500)
           
       elif message == '3':
           print('온도가 5도에서 24도 사이입니다. 식물이 잘 자라는 온도입니다.')
-          display.show(Image.GIRAFFE)
+          music.play(music.BIRTHDAY)
           sleep(500)
           
       elif message == '4':
           print('온도가 24도에서 35도 사이입니다.1시간 뒤 물을 주세요')
-          display.show(Image.DUCK)
+          music.play(music.ODE)
           sleep(500)
           
           
       elif message == '5':
           print('온도가 너무 높아요. 식물이 죽어가요, 옮겨주세요')
-          display.show(Image.GHOST)
+          music.play(music.FUNERAL)
           sleep(500)
   ```
 
