--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -264,7 +264,11 @@
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - GPT 리버스 프롬프트 엔지니어링 템플릿
+  - GPT리버스 프롬프트 엔지니어링 대화
+    ```
+    
+    ```
+  - GPT 프롬프트 템플릿
     ```
   
     ```
