--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -266,7 +266,13 @@
 * 샘플코드_01
   - GPT리버스 프롬프트 엔지니어링 대화
     ```
-    
+    1)안녕하세요 마이크로비트를 알고 있나요?
+    2)코드 분석 전문가 역할을 해주세요. 리버스 프롬프트 엔지니어링 기술을 활용하여 코드를 분석할 예정입니다.
+    3)(x)라는 변수 안에 제가 분석하려는 샘플 코드를 제시하겠습니다. 분석 부탁합니다.
+    4)위 코드 중 일부분을 수정하려고 합니다. 가능한가요?
+    5)템플릿을 제공하고 수정할 부분의 정확한 위치와 수정 내용을 입력하겠습니다.
+    -수정 위치:
+    -수정 내용:     
     ```
   - GPT 프롬프트 템플릿
     ```
