--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -264,6 +264,54 @@
 
 ## 적용하기 샘플코드
 * 샘플코드_01
+  - 적용하기 파트에서 사용할 '오디오 사운드 레벨 장치' 샘플 코드
+    ```
+    from microbit import *
+    import random
+    
+    microphone.set_threshold(SoundEvent.LOUD, 50)
+    microphone.set_threshold(SoundEvent.QUIET, 1)
+    
+    def led_level(a,b,c,d,e,f):
+        for y in range(4,f,-1): #f값은 -1~4까지 설정
+            display.set_pixel(a,y,9)
+            display.set_pixel(b,y,9)
+            display.set_pixel(c,y,9)
+            display.set_pixel(d,y,9)
+            display.set_pixel(e,y,9)
+            sleep(30)
+        for y in range(0,5,1):
+            display.set_pixel(a,y,0)
+            display.set_pixel(b,y,0)
+            display.set_pixel(c,y,0)
+            display.set_pixel(d,y,0)
+            display.set_pixel(e,y,0)
+            sleep(30)
+    
+    while True:
+        a=random.randrange(5)
+        b=random.randrange(5)
+        c=random.randrange(5)
+        d=random.randrange(5)
+        e=random.randrange(5)
+        if microphone.sound_level() > 40:
+            soundlevel=microphone.sound_level()
+            led_level(a,b,c,d,e,-1)
+        elif 30< microphone.sound_level() <= 40:
+            soundlevel=microphone.sound_level()
+            led_level(a,b,c,d,e,0)
+        elif 20< microphone.sound_level() <= 30:
+            soundlevel=microphone.sound_level()
+            led_level(a,b,c,d,e,1)
+        elif 10< microphone.sound_level() <= 20:
+            soundlevel=microphone.sound_level()
+            led_level(a,b,c,d,e,2)
+        elif 2< microphone.sound_level() <= 10:
+            soundlevel=microphone.sound_level()
+            led_level(a,b,c,d,e,3)
+        else:
+            display.clear()
+    ```
   - GPT리버스 프롬프트 엔지니어링 대화
     ```
     1)안녕하세요 마이크로비트를 알고 있나요?
