--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -267,30 +267,32 @@
   - 적용하기 파트에서 사용할 '오디오 사운드 레벨 장치' 샘플 코드
     ```
     from microbit import *
-
-    microphone.set_threshold(SoundEvent.LOUD, 50)
-    microphone.set_threshold(SoundEvent.QUIET, 1)
+  
+    microphone.set_threshold(SoundEvent.LOUD, 125) #LOUD 임계값 지정
+    microphone.set_threshold(SoundEvent.QUIET, 124) #QUIET 임계값 지정
     
     while True:
-        if microphone.sound_level() >= 15:
+        while microphone.current_event() == SoundEvent.LOUD:
             soundlevel=microphone.sound_level()
             for x in range(5):
                 for y in range(5):
                     display.set_pixel(x,y,9)
-                    sleep(30)
+                    sleep(100)
                 display.clear()
             sleep(2000)
-            print(soundlevel) 
+            print(soundlevel)
+            break
         
-        elif microphone.sound_level() < 10:
+        while microphone.current_event() == SoundEvent.QUIET:
             soundlevel=microphone.sound_level()
             for x in range(5):
-              for y in range(2): 
-                  display.set_pixel(x,y,9)
-                  sleep(30)
+                for y in range(2): 
+                    display.set_pixel(x,y,9)
+                    sleep(100)
             display.clear()
             sleep(2000)
             print(soundlevel)
+            break
     ```
   - GPT리버스 프롬프트 엔지니어링 대화
     ```
