--- a/Microbit/GPT+Microbit/13.while문 심화.md
+++ b/Microbit/GPT+Microbit/13.while문 심화.md
@@ -306,13 +306,54 @@
     ```
   - GPT 프롬프트 템플릿
     ```
-  
+    -수정 위치:
+    -수정 내용:
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    -수정 위치:  코드 9줄 ~ 11줄, 코드 20줄 ~ 22줄 
+    -수정 내용: 코드 9줄 ~ 11줄, 코드 20줄 ~ 22줄은 for문의 y값만 다른 구조는 같은 코드 입니다. for문안에 있는 LED 디스플레이 루프 형태를 수정합니다. 창의적으로 수정해주세요.
+    #'창의적' 부분을 LED픽셀 x,y값을 정확히 입력하여 수정해도 된다. '창의적'으로 작성하면 GPT가 다양한 코드 결과를 출력한다. 여기서 오류가 발생할 수 있다. 오류 또한 GPT를 이용하여 디버깅 해보자. 
     ```
   - GPT생성 코드
+  - 아직 random 라이브러리를 배우지 않았자만, GPT가 창의적으로 random라이브러리를 사용하여 x, y 픽셀을 일정 시간 동안 불규칙하게 키는 코드를 설계하였다. 
     ```
-   
+    from microbit import *
+    import random
+    
+    microphone.set_threshold(SoundEvent.LOUD, 125) #LOUD 임계값 지정
+    microphone.set_threshold(SoundEvent.QUIET, 124) #QUIET 임계값 지정
+    
+    while True:
+        # 코드 9줄 ~ 11줄 수정
+        while microphone.current_event() == SoundEvent.LOUD:
+            soundlevel = microphone.sound_level()
+            
+            # 5x5 디스플레이에 무작위로 밝은 LED를 표시합니다.
+            for _ in range(25):
+                x = random.randint(0, 4)
+                y = random.randint(0, 4)
+                display.set_pixel(x, y, 9)
+                sleep(100)
+            
+            display.clear()
+            sleep(2000)
+            print(soundlevel)
+            break
+        
+        # 코드 20줄 ~ 22줄 수정
+        while microphone.current_event() == SoundEvent.QUIET:
+            soundlevel = microphone.sound_level()
+            
+            # 5x2 디스플레이에 무작위로 밝은 LED를 표시합니다.
+            for _ in range(10):
+                x = random.randint(0, 4)
+                y = random.randint(0, 1)
+                display.set_pixel(x, y, 9)
+                sleep(100)
+            
+            display.clear()
+            sleep(2000)
+            print(soundlevel)
+            break
     ```
