--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -1,8 +1,21 @@
 # 복합자료형(list) 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
-* 샘플코드_01
+### 리스트 만들기
+* 샘플코드_01-01
 ```
+from microbit import * 
+
+blank = []
+numbers = ['one', 'two', 'three', 'four', 'five']
+print(blank)
+print(numbers) #display.show(), display.scroll()은 전체 리스트 값을 인자로 받지 못함.
+
+# display.scroll(numbers) ->오류
+# display.show(numbers) ->오류
+
+#str()로 캐스팅 하면 출력은 가능하지만 list안의 []까지 하나의 문자로 출력되는 형태임.
+display.scroll(str(numbers), delay=70)
+display.show(str(numbers))
 ```
 ### 실습제목입력
 * 샘플코드_02
