--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -21,7 +21,63 @@ display.show(str(numbers))
 ```
 from microbit import * 
 
+numbers = ['one', 'two', 'three', 'four', 'five']
+for number in numbers:
+    print(number)
+    display.scroll(number)
 ```
+
+* 샘플코드_01-3
+```
+from microbit import * 
+
+numbers = [1, 2, 3, 4, 5]
+for i in numbers:
+    print(i)
+    sleep(500)
+    display.show(i)
+    sleep(500)
+```
+
+* 샘플코드_01-4
+```
+#random 라이브러리 이해
+
+from microbit import *
+import random
+
+hands = ['rock', 'paper', 'scissors']
+print(random.choice(hands)) #random.choice()가 호출될 때마다 리스트에서 다른 값을 가지고 온다.
+display.scroll(random.choice(hands), delay=40)
+```
+
+* 샘플코드_01-5
+```
+#리스트 인덱싱
+
+from microbit import *
+import random
+
+hands = ['rock', 'paper', 'scissors']
+print(hands[0])
+display.scroll(hands[0], delay=40)
+```
+
+* 샘플코드_01-6
+```
+#리스트 슬라이싱
+from microbit import *
+
+numbers = [1,2,3,4,5,6,7,8,9,10]
+print(numbers[0:3])#이 표현을 자주 사용
+print(numbers[0:11:2])
+print(numbers[10:0:-1])
+
+display.scroll(str(numbers[0:3]), delay=40)
+display.scroll(str(numbers[0:11:2]), delay=40)
+display.scroll(str(numbers[10:0:-1]), delay=40)
+```
+
 ### 실습제목입력
 * 샘플코드_02
 ```
