--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -78,9 +78,15 @@ display.scroll(str(numbers[0:11:2]), delay=40)
 display.scroll(str(numbers[10:0:-1]), delay=40)
 ```
 
-### 실습제목입력
-* 샘플코드_02
+### 리스트 함수
+* 샘플코드_02-1
 ```
+from microbit import *
+
+alpahbet = ['a', 'b', 'd', 'd', 'e']
+alpahbet[2] = 'c'
+print(alpahbet)
+display.scroll(str(alpahbet))
 ```
 
 ### 실습제목입력
