--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -102,13 +102,13 @@ display.scroll(str(alpahbet))
 ### 실습제목입력
 * 샘플코드_03
 ```
-# 데이터 스왑
 from microbit import *
 
 alphabet = ['a', 'b', 'd', 'd', 'e']
 for i in range(5):
     alphabet[i] = i #마이크로 비트 에디터 창에서 오류가 발생함. 오류 이유는 리스트 값이 문자인데 정수를 넣으려해서 오류 발생. 리스트는 정수로 데이터 데이터 스왑이 가능하기에 오류 무시하고 실행됨. 
 print(alphabet)
+display.show(str(alphabet))
 ```
 
 ## 이해하기 샘플코드
