--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -106,9 +106,10 @@ from microbit import *
 
 alphabet = ['a', 'b', 'd', 'd', 'e']
 for i in range(5):
-    alphabet[i] = i #마이크로 비트 에디터 창에서 오류가 발생함. 오류 이유는 리스트 값이 문자인데 정수를 넣으려해서 오류 발생. 리스트는 정수로 데이터 데이터 스왑이 가능하기에 오류 무시하고 실행됨. 
-print(alphabet)
-display.show(str(alphabet))
+    alphabet[i] = i  #마이크로 비트 에디터 창에서 오류가 발생함. 오류 이유는 리스트 값이 문자인데 정수를 넣으려해서 오류 발생. 리스트는 정수로 데이터 데이터 스왑이 가능하기에 오류 무시하고 실행됨. 
+num_list = alphabet
+print(num_list)
+display.show(str(num_list))
 ```
 
 ## 이해하기 샘플코드
