--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -90,7 +90,7 @@ display.scroll(str(alpahbet))
 ```
 * 샘플코드_02-2
 ```
-# 데이터 스왑
+# 리스트 데이터 스왑_str
 from microbit import *
 
 alphabet = ['a', 'b', 'd', 'd', 'e']
@@ -99,9 +99,9 @@ print(alpahbet)
 display.scroll(str(alpahbet))
 ```
 
-### 실습제목입력
-* 샘플코드_03
+* 샘플코드_02-2
 ```
+# 리스트 데이터 스왑_int
 from microbit import *
 
 alphabet = ['a', 'b', 'd', 'd', 'e']
@@ -110,6 +110,71 @@ for i in range(5):
 num_list = alphabet
 print(num_list)
 display.show(str(num_list))
+```
+
+* 샘플코드_02-3
+```
+# 리스트 데이터 스왑_list
+from microbit import *
+
+num_list = [1, 2, 3, 4, 5]
+for i in range(3):
+    num_list[i] = [0]
+print(num_list)
+
+num_list[0][0] = 3.14
+num_list[1][0] = 'a', 'b', 'c'
+
+print(num_list)
+display.scroll(str(num_list[0][0]))
+```
+
+* 샘플코드_02-4
+```
+# 리스트 함수 한번에 끝내기
+from microbit import *
+
+#과일가게 진열대
+fruit_list = ['apple', 'banana', 'strawberry', 'orange']
+
+#어느날 mango과일이 들어와서 진열대 제일 뒤에 추가하려면?
+fruit_list.append('mango')
+print(fruit_list)
+
+#리스트 인덱싱으로 4번 주소에 망고 들어온 것을 확인
+display.scroll(fruit_list[4], delay=35)
+
+#오렌지가 떨어져서 lemon으로 교체하려면?
+fruit_list[3] = 'lemon'
+display.scroll(fruit_list[3], delay=35) #3번주소 데이터 스왑으로 교체
+
+#새로운 과일 grape이 들어와서 2번 주소에 추가하려면?
+fruit_list.insert(2, 'grape') #2번 주소에 grape 삽입되고, 다른 과일은 뒤로 밀림
+print(fruit_list)
+
+#apple이 다 팔려서 진열대에서 없애려면?
+fruit_list.pop(0) #리스트 주소값으로 제거
+print(fruit_list)
+display.scroll(fruit_list[0], delay=35) #0번 주소 과일이 banana로 변경됨을 확인
+
+#진열대 순서(주소값)을 모르는데 strawberry가 모두 떨어저셔 없어애려면?
+fruit_list.remove('strawberry')
+print(fruit_list)
+
+#이제 남은 과일 수를 확인하려면?
+display.scroll(len(fruit_list))
+
+#진열대 과일이 모두 다 팔려서 모두 삭제하려면?
+fruit_list.clear()
+print(fruit_list)
+display.scroll(str(fruit_list))
+sleep(1000)
+
+```
+### 실습제목입력
+* 샘플코드_03
+```
+
 ```
 
 ## 이해하기 샘플코드
