--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -169,8 +169,27 @@ fruit_list.clear()
 print(fruit_list)
 display.scroll(str(fruit_list))
 sleep(1000)
-
 ```
+
+* 샘플코드_02-5
+```
+from microbit import*
+import music
+
+alphabet = ['p', 'b', 'w', 'j', 'm', 'f', 'i', 'x', 's', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
+display.show(alphabet, delay=180)
+music.play(music.BA_DING)
+
+
+alphabet.sort() # 
+display.show(alphabet, delay=180)
+music.play(music.BA_DING)
+
+alphabet.reverse()
+display.show(alphabet, delay=180)
+music.play(music.BA_DING)
+```
+
 ### 실습제목입력
 * 샘플코드_03
 ```
