--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -171,7 +171,9 @@ display.scroll(str(fruit_list))
 sleep(1000)
 ```
 
-* 샘플코드_02-5
+
+### 리스트 정렬과 카운트 함수
+* 샘플코드_03-1
 ```
 #리스트 정렬, 역순 정렬
 from microbit import*
@@ -191,11 +193,10 @@ display.show(alphabet, delay=180)
 music.play(music.BA_DING)
 ```
 
-### 실습제목입력
-* 샘플코드_03
+* 샘플코드_03-2
+```
 ```
 
-```
 
 ## 이해하기 샘플코드
 * 샘플코드_01
