--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -195,6 +195,26 @@ music.play(music.BA_DING)
 
 * 샘플코드_03-2
 ```
+#리스트 카운트 함수
+#리스트 정렬, 역순 정렬
+from microbit import*
+
+alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
+while True:
+    search = str(input('알파벳을 입력해주세요:'))
+    print('{}의 개수는 {}입니다'.format(search, alphabet.count(search)))
+    display.show(alphabet.count(search))
+```
+
+* 샘플코드_03-3
+```
+#리스트 카운트 합수 응용
+from microbit import*
+
+alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
+
+for x in range(len(alphabet)):
+    print('{}주소의 알파벳은 개수는 {}입니다'.format(alphabet[x], alphabet.count(alphabet[x])))
 ```
 
 
