--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -209,12 +209,16 @@ while True:
 * 샘플코드_03-3
 ```
 #리스트 카운트 합수 응용
-from microbit import*
-
 alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
+overlap = {}  # 중복된 알파벳을 저장하기 위한 빈 딕셔너리
 
-for x in range(len(alphabet)):
-    print('{}주소의 알파벳은 개수는 {}입니다'.format(alphabet[x], alphabet.count(alphabet[x])))
+for x in alphabet:
+    count = alphabet.count(x)
+    if count > 1:
+        overlap[x] = count
+
+for letter, count in overlap.items():
+    print('{} 주소의 알파벳은 개수는 {}입니다'.format(letter, count))
 ```
 
 
