--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -209,16 +209,17 @@ while True:
 * 샘플코드_03-3
 ```
 #리스트 카운트 합수 응용
+from microbit import*
+import music
+
 alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
-overlap = {}  # 중복된 알파벳을 저장하기 위한 빈 딕셔너리
 
-for x in alphabet:
-    count = alphabet.count(x)
-    if count > 1:
-        overlap[x] = count
-
-for letter, count in overlap.items():
-    print('{} 주소의 알파벳은 개수는 {}입니다'.format(letter, count))
+for x in range(len(alphabet)):
+    print('{}주소의 알파벳은 개수는 {}입니다'.format(alphabet[x], alphabet.count(alphabet[x])))
+    if alphabet.count(alphabet[x]) > 1:
+        music.play(music.JUMP_UP)
+        sleep(500)
+#코드의 문제점은? 중복이 되는 단어가 나올 때 500ms마다 멈추며 JUMP_UP소리를 내준다. 자동으로 중복 단어를 검색하고 개수만 알려주도록 할 수는 없을까?
 ```
 
 
@@ -233,6 +234,17 @@ for letter, count in overlap.items():
 
 * 샘플코드_03
 ```
+#리스트 카운트 합수 응용
+alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
+overlap = {}  # 중복된 알파벳을 저장하기 위한 빈 딕셔너리
+
+for x in alphabet:
+    count = alphabet.count(x)
+    if count > 1:
+        overlap[x] = count
+
+for letter, count in overlap.items():
+    print('{} 주소의 알파벳은 개수는 {}입니다'.format(letter, count))
 ```
 
 ## 적용하기 샘플코드
