--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -99,7 +99,7 @@ print(alpahbet)
 display.scroll(str(alpahbet))
 ```
 
-* 샘플코드_02-2
+* 샘플코드_02-3
 ```
 # 리스트 데이터 스왑_int
 from microbit import *
@@ -112,7 +112,7 @@ print(num_list)
 display.show(str(num_list))
 ```
 
-* 샘플코드_02-3
+* 샘플코드_02-4
 ```
 # 리스트 데이터 스왑_list
 from microbit import *
@@ -129,7 +129,7 @@ print(num_list)
 display.scroll(str(num_list[0][0]))
 ```
 
-* 샘플코드_02-4
+* 샘플코드_02-5
 ```
 # 리스트 함수 한번에 끝내기
 from microbit import *
@@ -181,30 +181,55 @@ import music
 
 alphabet = ['p', 'b', 'w', 'j', 'm', 'f', 'i', 'x', 's', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
 display.show(alphabet, delay=180)
-music.pla기
-from microbit import *
+music.play(music.BA_DING)
 
-# 리스트와 초기 인덱스
-my_list = ['a', 'b', 'c', 'd', 'e', 'f']
-index = 0
 
+alphabet.sort() # 
+display.show(alphabet, delay=180)
+music.play(music.BA_DING)
+
+alphabet.reverse()
+display.show(alphabet, delay=180)
+music.play(music.BA_DING)
+```
+
+* 샘플코드_03-2
+```
+#리스트 카운트 함수
+#리스트 정렬, 역순 정렬
+from microbit import*
+
+alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
 while True:
-    # A 버튼을 누르면 인덱스 증가
-    if button_a.was_pressed():
-        index -= 1
-        if index < 0:
-            index = len(my_list) - 1
-        
+    search = str(input('알파벳을 입력해주세요:'))
+    print('{}의 개수는 {}입니다'.format(search, alphabet.count(search)))
+    display.show(alphabet.count(search))
+```
 
-    # B 버튼을 누르면 인덱스 감소
-    if button_b.was_pressed():
-        index += 1
-        if index >= len(my_list):
-            index = 0
+* 샘플코드_03-3
+```
+#리스트 카운트 합수 응용
+from microbit import*
+import music
 
-    # 현재 선택된 값을 LED에 표시
-    display.show(my_list[index])
+alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
 
+for x in range(len(alphabet)):
+    print('{}주소의 알파벳은 개수는 {}입니다'.format(alphabet[x], alphabet.count(alphabet[x])))
+    if alphabet.count(alphabet[x]) > 1:
+        music.play(music.JUMP_UP)
+        sleep(500)
+#코드의 문제점은? 중복이 되는 단어가 나올 때 500ms마다 멈추며 JUMP_UP소리를 내준다. 자동으로 중복 단어를 검색하고 개수만 알려주도록 할 수는 없을까?
+```
+
+
+## 이해하기 샘플코드
+* 샘플코드_01
+```
+```
+
+* 샘플코드_02
+```
 ```
 
 * 샘플코드_03
