--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -184,7 +184,7 @@ display.show(alphabet, delay=180)
 music.play(music.BA_DING)
 
 
-alphabet.sort() # 
+alphabet.sort() # 마이크로 비트 에디터에서는 데이터 타입 에러가 발생하지만, 코드에 오류가 없기에 잘 구동된다.
 display.show(alphabet, delay=180)
 music.play(music.BA_DING)
 
