--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -225,14 +225,40 @@ for x in range(len(alphabet)):
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 가위, 바위, 보 게임 장치 만들기
 ```
+
 ```
 
 * 샘플코드_02
+  - 버튼으로 리스트 값 LED 출력하기
 ```
+from microbit import *
+
+# 리스트와 초기 인덱스
+my_list = ['a', 'b', 'c', 'd', 'e', 'f']
+index = 0
+
+while True:
+    # A 버튼을 누르면 인덱스 증가
+    if button_a.was_pressed():
+        index -= 1
+        if index < 0:
+            index = len(my_list) - 1
+        
+
+    # B 버튼을 누르면 인덱스 감소
+    if button_b.was_pressed():
+        index += 1
+        if index >= len(my_list):
+            index = 0
+
+    # 현재 선택된 값을 LED에 표시
+    display.show(my_list[index])
 ```
 
 * 샘플코드_03
+ - 중복된 리스트 값만 찾아내는 코드
 ```
 #리스트 카운트 합수 응용
 alphabet = ['p', 'b', 'a', 'w', 'j', 'b', 'm', 'f', 'i', 'x', 's', 'c', 'n', 't', 'y', 'q', 'c', 'l', 'v', 'z', 'd', 'e', 'a', 'r', 'h', 'k', 'u', 'a', 'o', 'g']
