--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -225,7 +225,51 @@ for x in range(len(alphabet)):
 
 ## 이해하기 샘플코드
 * 샘플코드_01
-  - 가위, 바위, 보 게임 장치 만들기
+  - 가위, 바위, 보 게임 장치 만들기(라디오 통신 활용)
+  - 송신(Send) 코드
+```
+from microbit import *
+import random
+import radio
+
+
+# 라디오 설정
+radio.on()
+radio.config(channel=7)
+
+while True:
+    if button_a.was_pressed():
+        # 가위바위보 중 하나를 선택합니다.
+        choice = random.randint(0, 2)
+        
+        # 선택한 값을 라디오로 전송합니다.
+        radio.send(str(choice))
+        
+        # 결과를 디스플레이에 출력합니다.
+        if choice == 0:
+            display.show(Image('00000:'
+                               '08080:'
+                               '00800:'
+                               '08880:'
+                               '08880'))
+            
+        elif choice == 1:
+            display.show(Image('00000:'
+                               '00000:'
+                               '04440:'
+                               '08880:'
+                               '08880'))
+        else:
+            display.show(Image('00000:'
+                               '80808:'
+                               '08880:'
+                               '68886:'
+                               '08880'))
+        sleep(1000)
+        display.clear()
+```
+
+  - 수신(Recieve) 코드
 ```
 
 ```
