--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -271,7 +271,40 @@ while True:
 
   - 수신(Recieve) 코드
 ```
+from microbit import *
+import radio
+import random
 
+# 라디오 설정
+radio.on()
+radio.config(channel=7)
+
+while True:
+    display.scroll("Press A to play...")
+    radio.receive()
+    
+    if button_a.was_pressed():
+        # 상대방의 선택을 받아옵니다.
+        opponent_choice = radio.receive()
+        
+        if opponent_choice is not None:
+            opponent_choice = int(opponent_choice)
+            
+            # 자신의 선택을 랜덤으로 생성합니다.
+            my_choice = random.randint(0, 2)
+            
+            # 결과를 판단합니다.
+            result = (my_choice - opponent_choice) % 3
+            
+            if result == 0:
+                display.show("DRAW")
+            elif result == 1:
+                display.show("WIN")
+            else:
+                display.show("LOSE")
+            
+            sleep(2000)
+            display.clear()
 ```
 
 * 샘플코드_02
