--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -240,7 +240,7 @@ radio.config(channel=7)
 while True:
     if button_a.was_pressed():
         # 가위바위보 중 하나를 선택합니다.
-        choice = random.randint(0, 2)
+        choice = random.randint(0, 3)
         
         # 선택한 값을 라디오로 전송합니다.
         radio.send(str(choice))
@@ -252,6 +252,7 @@ while True:
                                '00800:'
                                '08880:'
                                '08880'))
+            sleep(2000)
             
         elif choice == 1:
             display.show(Image('00000:'
@@ -259,12 +260,14 @@ while True:
                                '04440:'
                                '08880:'
                                '08880'))
-        else:
+            sleep(2000)
+        elif choice == 3:
             display.show(Image('00000:'
                                '80808:'
                                '08880:'
                                '68886:'
                                '08880'))
+            sleep(2000)
         sleep(1000)
         display.clear()
 ```
