--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -232,21 +232,21 @@ from microbit import *
 import random
 import radio
 
-
 # 라디오 설정
 radio.on()
 radio.config(channel=7)
+hand = ['scissors', 'rock', 'paper']
 
 while True:
     if button_a.was_pressed():
         # 가위바위보 중 하나를 선택합니다.
-        choice = random.randint(0, 3)
+        choice = random.choice(hand)
         
         # 선택한 값을 라디오로 전송합니다.
-        radio.send(str(choice))
+        radio.send(choice)
         
         # 결과를 디스플레이에 출력합니다.
-        if choice == 0:
+        if choice == 'scissors':
             display.show(Image('00000:'
                                '08080:'
                                '00800:'
@@ -254,14 +254,14 @@ while True:
                                '08880'))
             sleep(2000)
             
-        elif choice == 1:
+        elif choice == 'rock':
             display.show(Image('00000:'
                                '00000:'
                                '04440:'
                                '08880:'
                                '08880'))
             sleep(2000)
-        elif choice == 3:
+        elif choice == 'paper':
             display.show(Image('00000:'
                                '80808:'
                                '08880:'
