--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -240,14 +240,14 @@ hand = ['scissors', 'rock', 'paper']
 while True:
     if button_a.was_pressed():
         # 가위바위보 중 하나를 선택합니다.
-        choice = random.randint(0,3)
+        send_choice = random.randint(0,3)
         
         # 선택한 값을 라디오로 전송합니다.
-        radio.send(str(choice))
+        radio.send(str(send_choice))
         
         # 결과를 디스플레이에 출력합니다.
         if choice == 0:
-            print(hand[choice])
+            print(hand[send_choice])
             display.show(Image('00000:'
                                '08080:'
                                '00800:'
@@ -256,7 +256,7 @@ while True:
             sleep(1000)
             
         elif choice == 1:
-            print(hand[choice])
+            print(hand[send_choice])
             display.show(Image('00000:'
                                '00000:'
                                '04440:'
@@ -264,7 +264,7 @@ while True:
                                '08880'))
             sleep(1000)
         elif choice == 2:
-            print(hand[choice])
+            print(hand[send_choice])
             display.show(Image('00000:'
                                '80808:'
                                '08880:'
