--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -284,32 +284,28 @@ import random
 # 라디오 설정
 radio.on()
 radio.config(channel=7)
+print("Press A to play...")
+hand = ['scissors', 'rock', 'paper']  # 0, 1, 2
 
 while True:
-    display.scroll("Press A to play...")
-    radio.receive()
-    
     if button_a.was_pressed():
-        # 상대방의 선택을 받아옵니다.
         opponent_choice = radio.receive()
-        
         if opponent_choice is not None:
             opponent_choice = int(opponent_choice)
-            
-            # 자신의 선택을 랜덤으로 생성합니다.
-            my_choice = random.randint(0, 2)
-            
-            # 결과를 판단합니다.
-            result = (my_choice - opponent_choice) % 3
-            
-            if result == 0:
-                display.show("DRAW")
-            elif result == 1:
-                display.show("WIN")
+            choice = random.randint(0, 2)
+
+            # 승패 결정 로직
+            if choice == opponent_choice:
+                result = 'draw'
+            elif (choice == 0 and opponent_choice == 2) or (choice == 1 and opponent_choice == 0) or (choice == 2 and opponent_choice == 1):
+                result = 'win'
             else:
-                display.show("LOSE")
-            
-            sleep(2000)
+                result = 'lose'
+
+            # 결과 표시
+            print('You {}!'.format(result))    
+            display.scroll(hand[choice], delay=60)
+            sleep(1000)
             display.clear()
 ```
 
