--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -354,9 +354,11 @@ for letter, count in overlap.items():
 
 ## 적용하기 샘플코드
 * 샘플코드_01
+  - 버튼과 가속도 센서 활용하여 주사위 만들기
   - GPT프롬프트 템플릿
     ```
-  
+    # 한 문단에 좋은 결과를 위한 프롬프트 내용 모두 포함하여 명령하기
+    
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
