--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -357,8 +357,8 @@ for letter, count in overlap.items():
   - 버튼과 가속도 센서 활용하여 주사위 만들기
   - GPT프롬프트 템플릿
     ```
-    # 한 문단에 좋은 결과를 위한 프롬프트 내용 모두 포함하여 명령하기
-    # 제가 현재 진행 중인 {프로젝트 명}에 대해 마이크로비트를 사용하여 파이썬으로 {특정 기능}을 구현하고자 합니다. 이 기능을 위해 필요한 코드를 명확하고 정확하게 설계하는 데 도움이 필요합니다. {문맥적 요소}를 고려하여, {특정 조건}에 맞는 최적의 코드 구조를 제안해주세요. 또한, 이 프로젝트가 현재 {최신 정보}에 부합하는지 검증하고, 필요한 경우 {윤리적 및 법적 고려사항}을 고려한 내용을 주석에 포함해주세요. 마지막으로, {추가 및 다양한 기능}을 통해 이 프로젝트를 향상시킬 수 있는 방법도 함께 제시해주세요.
+    한 문단에 좋은 결과를 위한 프롬프트 내용 모두 포함하여 명령하기
+    제가 현재 진행 중인 {프로젝트 명}에 대해 마이크로비트를 사용하여 파이썬으로 {특정 기능}을 구현하고자 합니다. 이 기능을 위해 필요한 코드를 명확하고 정확하게 설계하는 데 도움이 필요합니다. {문맥적 요소}를 고려하여, {특정 조건}에 맞는 최적의 코드 구조를 제안해주세요. 또한, 이 프로젝트가 현재 {최신 정보}에 부합하는지 검증하고, 필요한 경우 {윤리적 및 법적 고려사항}을 고려한 내용을 주석에 포함해주세요. 마지막으로, {추가 및 다양한 기능}을 통해 이 프로젝트를 향상시킬 수 있는 방법도 함께 제시해주세요.
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
