--- a/Microbit/GPT+Microbit/14.복합자료형(list).md
+++ b/Microbit/GPT+Microbit/14.복합자료형(list).md
@@ -362,7 +362,7 @@ for letter, count in overlap.items():
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    저는 현재 마이크로비트를 이용해 파이썬으로 디지털 주사위를 만드는 {디지털 주사위 프로젝트}를 진행 중입니다. 이 주사위는 마이크로비트의 버튼을 누르거나 가속도 센서를 흔들어서 {1부터 6까지의 무작위 숫자 생성} 기능을 구현해야 합니다. 프로젝트의 핵심은 {버튼 누름 또는 가속도 센서 흔들림 감지}를 통해 주사위 숫자를 결정하는 것입니다. 제가 구상한 코드 설계에 {가속도 센서와 버튼 입력 처리 방법}에 대한 자세한 가이드라인을 제공해주시면 감사하겠습니다. 또한, 최근 마이크로비트 라이브러리의 {업데이트 사항}에 대해서도 알려주시고, 이 프로젝트에서 {윤리적 또는 법적 문제}가 없는지 확인해주세요. 마지막으로, 이 주사위 기능 외에 마이크로비트의 다른 기능을 활용하여 {프로젝트의 흥미를 높일 수 있는 추가적인 요소}에 대한 아이디어도 함께 고려해주시면 감사하겠습니다.
     ```
   - GPT생성 코드
     ```
