--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -3,6 +3,24 @@
 ### 실습제목입력
 * 샘플코드_01
 ```
+from microbit import *
+import time
+
+while True:
+    # 현재 시간 스탬프
+    current_time = time.ticks_ms()
+
+    # 센서 데이터 수집
+    temperature_data = temperature()  # 온도 센서 데이터
+
+    # 데이터와 시간 스탬프를 튜플로 묶기
+    sensor_data = (current_time, temperature_data)
+
+    # 데이터 출력
+    print("시간:", sensor_data[0], "ms, 온도:", sensor_data[1])
+
+    # 일정 시간 대기
+    sleep(1000)
 ```
 ### 실습제목입력
 * 샘플코드_02
@@ -17,6 +35,26 @@
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
+from microbit import *
+import time
+
+while True:
+    # 현재 시간 스탬프
+    current_time = time.ticks_ms()
+
+    # 센서 데이터 수집
+    temperature_data = temperature()  # 온도 센서 데이터
+    light_level = display.read_light_level()  # 조도 데이터
+    acceleration = accelerometer.get_values()  # 가속도 데이터 (x, y, z 축)
+
+    # 데이터와 시간 스탬프를 튜플로 묶기
+    sensor_data = (current_time, temperature_data, light_level, acceleration)
+
+    # 데이터 출력
+    print("시간:", sensor_data[0], "ms, 온도:", sensor_data[1], "°C, 광도:", sensor_data[2], ", 가속도:", sensor_data[3])
+
+    # 일정 시간 대기
+    sleep(1000)
 ```
 
 * 샘플코드_02
