--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -25,6 +25,32 @@ while True:
 ### 실습제목입력
 * 샘플코드_02
 ```
+from microbit import *
+import time
+
+# 센서 데이터를 관리할 딕셔너리 초기화
+sensor_data_dict = {}
+
+while True:
+    # 현재 시간 스탬프를 키로 사용
+    current_time = time.ticks_ms()
+
+    # 센서 데이터 수집
+    temperature_data = temperature()  # 온도 데이터
+    light_level = display.read_light_level()  # 광도 데이터
+    acceleration = accelerometer.get_values()  # 가속도 데이터 (x, y, z 축)
+
+    # 딕셔너리에 센서 데이터 저장
+    sensor_data_dict[current_time] = {
+        "temperature": temperature_data,
+        "light_level": light_level,
+        "acceleration": acceleration
+    }
+
+    # 최신 센서 데이터 출력
+    print(current_time, '초'+"최신 센서 데이터:", sensor_data_dict[current_time])
+    # 일정 시간 대기
+    sleep(5000)
 ```
 
 ### 실습제목입력
