--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -3,6 +3,31 @@
 ### 실습제목입력
 * 샘플코드_01
 ```
+#챕터5 a, b버튼 카운팅 출력 코드 응용 수정
+#button_a.get_presses() 함수를 사용하지 않고, 버튼이 눌린 횟수를 계산하여 출력
+#튜플을 사용하고 튜플의 특징인 요소 접근 방법 및 튜플의 불변성을 이해할 수 있는 코드
+
+from microbit import *
+
+# 버튼 A와 B의 클릭 횟수를 저장할 튜플 초기화 (A 클릭 횟수, B 클릭 횟수)
+button_clicks = (0, 0)
+
+while True:
+    # 버튼 A가 클릭되었을 때
+    if button_a.was_pressed():
+        # 튜플의 불변성 때문에 새로운 튜플을 생성하여 클릭 횟수 업데이트
+        button_clicks = (button_clicks[0] + 1, button_clicks[1])
+        display.show("A")
+
+    # 버튼 B가 클릭되었을 때
+    if button_b.was_pressed():
+        # 튜플의 불변성 때문에 새로운 튜플을 생성하여 클릭 횟수 업데이트
+        button_clicks = (button_clicks[0], button_clicks[1] + 1)
+        display.show("B")
+
+    # 버튼 A와 B를 동시에 눌러서 클릭 횟수 확인
+    if button_a.is_pressed() and button_b.is_pressed():
+        display.scroll("A:{} B:{}".format(button_clicks[0], button_clicks[1]))
 ```
 ### 실습제목입력
 * 샘플코드_02
