--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -32,6 +32,25 @@ while True:
 ### 실습제목입력
 * 샘플코드_02
 ```
+from microbit import *
+
+# 버튼 A와 B의 클릭 횟수를 저장할 딕셔너리 초기화
+button_clicks = {'A': 0, 'B': 0}
+
+while True:
+    # 버튼 A가 클릭되었을 때
+    if button_a.was_pressed():
+        button_clicks['A'] += 1  # 딕셔너리에서 "A" 키의 값을 업데이트
+        display.show('A')
+
+    # 버튼 B가 클릭되었을 때
+    if button_b.was_pressed():
+        button_clicks['B'] += 1  # 딕셔너리에서 "B" 키의 값을 업데이트
+        display.show('B')
+
+    # 버튼 A와 B를 동시에 눌러서 클릭 횟수 확인
+    if button_a.is_pressed() and button_b.is_pressed():
+        display.scroll('A:{} B:{}'.format(button_clicks['A'], button_clicks['B']))
 ```
 
 ### 실습제목입력
