--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -56,8 +56,63 @@ while True:
 ### 실습제목입력
 * 샘플코드_03
 ```
-```
+from microbit import *
 
+# 누른 버튼의 종류를 저장할 셋 초기화
+pressed_buttons = set()
+
+while True:
+    # 버튼 A가 클릭되었을 때
+    if button_a.was_pressed():
+        pressed_buttons.add('A')  # 셋에 "A" 추가
+        display.show('A')
+        sleep(200)
+        display.clear()
+
+    # 버튼 B가 클릭되었을 때
+    if button_b.was_pressed():
+        pressed_buttons.add('B')  # 셋에 "B" 추가
+        display.show('B')
+        sleep(200)
+        display.clear()
+
+    # 버튼 A와 B를 동시에 눌러서 기록된 버튼 종류 확인
+    if button_a.is_pressed() and button_b.is_pressed():
+        # 기록된 버튼 종류 출력
+        for button in pressed_buttons:
+          display.scroll(button)  
+        break  # 반복문 종료
+
+```
+ - 위 코드 리스트(list)와 비교
+   ```
+   from microbit import *
+
+    # 누른 버튼의 종류를 저장할 셋 초기화
+    pressed_buttons = []
+    
+    while True:
+        # 버튼 A가 클릭되었을 때
+        if button_a.was_pressed():
+            pressed_buttons.append('A')  # 셋에 "A" 추가
+            display.show('A')
+            sleep(200)
+            display.clear()
+    
+        # 버튼 B가 클릭되었을 때
+        if button_b.was_pressed():
+            pressed_buttons.append('B')  # 셋에 "B" 추가
+            display.show('B')
+            sleep(200)
+            display.clear()
+    
+        # 버튼 A와 B를 동시에 눌러서 기록된 버튼 종류 확인
+        if button_a.is_pressed() and button_b.is_pressed():
+            # 기록된 버튼 종류 출력
+            for button in pressed_buttons:
+              display.scroll(button)  
+            break  # 반복문 종료
+   ```
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
