--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -1,6 +1,6 @@
 # 복합자료형(dictionary&tuple&set) 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
+### 튜플 이해 및 실습
 * 샘플코드_01
 ```
 #챕터5 a, b버튼 카운팅 출력 코드 응용 수정
@@ -29,7 +29,7 @@ while True:
     if button_a.is_pressed() and button_b.is_pressed():
         display.scroll("A:{} B:{}".format(button_clicks[0], button_clicks[1]))
 ```
-### 실습제목입력
+### 딕셔너리 이해 및 실습
 * 샘플코드_02
 ```
 from microbit import *
@@ -53,7 +53,7 @@ while True:
         display.scroll('A:{} B:{}'.format(button_clicks['A'], button_clicks['B']))
 ```
 
-### 실습제목입력
+### 셋 이해 및 실습
 * 샘플코드_03
 ```
 from microbit import *
@@ -64,14 +64,14 @@ pressed_buttons = set()
 while True:
     # 버튼 A가 클릭되었을 때
     if button_a.was_pressed():
-        pressed_buttons.add('A')  # 셋에 "A" 추가
+        pressed_buttons.add('A')  # 셋에 'A' 추가
         display.show('A')
         sleep(200)
         display.clear()
 
     # 버튼 B가 클릭되었을 때
     if button_b.was_pressed():
-        pressed_buttons.add('B')  # 셋에 "B" 추가
+        pressed_buttons.add('B')  # 셋에 'B' 추가
         display.show('B')
         sleep(200)
         display.clear()
@@ -94,14 +94,14 @@ while True:
     while True:
         # 버튼 A가 클릭되었을 때
         if button_a.was_pressed():
-            pressed_buttons.append('A')  # 셋에 "A" 추가
+            pressed_buttons.append('A')  # 리스트에 'A' 추가
             display.show('A')
             sleep(200)
             display.clear()
     
         # 버튼 B가 클릭되었을 때
         if button_b.was_pressed():
-            pressed_buttons.append('B')  # 셋에 "B" 추가
+            pressed_buttons.append('B')  # 리스트에 'B' 추가
             display.show('B')
             sleep(200)
             display.clear()
