--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -170,8 +170,32 @@ while True:
 
 * 샘플코드_03
 ```
-```
+from microbit import *
+import random
 
+def generate_random_set():
+    random_set = set()
+    while len(random_set) < 5:
+        random_set.add(random.randint(1, 9))
+    return random_set
+
+# 집합 A와 B 생성
+set_A = generate_random_set()
+set_B = generate_random_set()
+print(set_A)
+print(set_B)
+print(set_A.union(set_B)) #합집합
+print(set_A.intersection(set_B)) #교집합
+
+
+list = list(set_A.union(set_B))
+print(list)
+print(sorted(list)) #sorted()함수는 list값에 영향을 미치지 않는다.
+
+list.reverse() #list값에 영향을 미친다.
+print(list)
+```
+  - [런모어 질문] 이해하기 샘플코드 3을 활용하여 마이크로 비트로 두 세트의 '교집합' 맞추기 게임기를 만들어 보세요. 
 ## 적용하기 샘플코드
 * 샘플코드_01
   - GPT프롬프트 템플릿
