--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -199,9 +199,13 @@ print(list)
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - GPT프롬프트 템플릿
+  - GPT 프롬프트 명령 순서 샘플
     ```
-  
+    1)
+    2)
+    3)
+    4)
+    5)
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
