--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -199,7 +199,7 @@ print(list)
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - GPT 프롬프트 명령 순서 샘플
+  - GPT 프롬프트 명령을 템플릿을 사용하지 않고 대화를 활용하여 코드를 설계하는 방법
     ```
     1)
     2)
