--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -201,17 +201,28 @@ print(list)
 * 샘플코드_01
   - GPT 프롬프트 명령을 템플릿을 사용하지 않고 대화를 활용하여 코드를 설계하는 방법
     ```
-    1)
-    2)
-    3)
-    4)
-    5)
+    1번 명령) 사용할 샘플 코드를 GPT 대화 창에 복사한다.(복사를 하면 GPT가 주석을 달거나, 알고리즙을 설명해준다. 설명 된 상타에서 부족한 부분이 있으면 다음 명령 대화에서 제시해준다.) 
+    2번 명령) 위 코드는 OOO언어로 설계된 알고리즘 입니다. OOO을 제어하기 위한 코드입니다.   
+    3번 명령) 위 코드를 참조하여 새로운 코드를 설계하려는데, 코드 개발자 역할을 해줄 수 있나요?
+    4번 명령) OOO의 기능을 하는 코드를 설계해주세요.(여기서 OOO의 기능을 프롬프트 템플릿을 제시하여 제공할 수 있지만, 이번 챕터에서는 대화로 원하는 코드를 받아 보는 것을 목적으로 한다. 코드 출력 후 IDE프로그램을 활용하여 테스트를 해 본다. 이후 잘못된 줄(라인)의 수정을 요청하며 원하는 코드로 수렴해 가는 작업을 거친다.)
+    5번 명령) 코드에 사용하고 싶은 파이썬 문법을 명확하게 설명해준다.
+    6번 명령) x라인 부분을 OOO하게 수정해주세요.
+    #여기서 중요한 점은 GPT를 사용하는 사용자가 컴퓨터 언어를 알고 있는 만큼 수정 부분이 보인다는 것이다. 물론, "안돼요. 다시 수정해주세요."라는 구체적이지 않은 명령어로 지속적으로 코드 수정을 요청할 수 있지만, 효율성이 떨어진다. 코드 부분의 오류를 어떤 형식으로 수정해달라고 명확히 제시 할 수 있다면 당연 코드는 더 정교하고 완벽하게 설계될 것이다. GPT를 사용할 떄 반드시 기억해야한다. 우리도 지속적으로 배워야 한다. 
     ```
-  - GPT 프롬프트 템플릿 입력 내용
+  - GPT 프롬프트 대화 형태 명령 예시
+    ```
+    #배우기_샘플코드 2의 딕셔너리 기본 코드를 이해시킨 후 '딕셔너리 활용 ‘주기율표 원소 1- 5번’ 까지 번호 맞추기 게임 장치'를 만들어 보겠습니다.
+    1번 명령) 배우기_샘플코드 2를 복사하여 GPT채팅창에 넣습니다.
+    2번 명령) 위 코드는 파이썬(python)언어로 설계된 알고리듬입니다. 마이크로 비트를 제어하기 위한 코드입니다. 더불어 딕셔너리(dic)를 이해하기 위한 기본 코드입니다.
+    3번 명령) 위 코드를 수정하여 원소 주기율표의 1번부터 5번까지 원소의 번호를 맞추는 마이크로 비트 게임장치를 설계하려 합니다. 코드 개발자 역할을 해줄 수 있나요?
+    4번 명령) 마이크로 비트 게임 장치 코드를 설계해 주세요.
+    5번 명령) dic의 key에 원소라 문자로 들어가고, value에 번호가 들거가게 해주세요. 코드 처음에 print()함수로 원소 번호를 묻는 문제를 내주세요. 그리고 input()함수로 정답을 맞출 수 있도록 설계해주세요. 정답을 맞추면 마이크로 비트에 하트가 나오도록, 정답이 틀리면 엑스가 나오도록 설계해주세요.  
+    ```
+  - GPT생성 코드(3번 명령까지)
     ```
    
     ```
-  - GPT생성 코드
+  - GPT생성 코드(4번 명령까지)
     ```
    
     ```
