--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -203,7 +203,7 @@ print(list)
     ```
     1번 명령) 사용할 샘플 코드를 GPT 대화 창에 복사한다.(복사를 하면 GPT가 주석을 달거나, 알고리즙을 설명해준다. 설명 된 상타에서 부족한 부분이 있으면 다음 명령 대화에서 제시해준다.) 
     2번 명령) 위 코드는 OOO언어로 설계된 알고리즘 입니다. OOO을 제어하기 위한 코드입니다.   
-    3번 명령) 위 코드를 참조하여 새로운 코드를 설계하려는데, 코드 개발자 역할을 해줄 수 있나요?
+    3번 명령) 위 코드를 참조하여 새로운 코드를 설계하려는데, 코드 개발자 역할을 해줄 수 있나요? (3번까지 명령 했을 때 추론하여 코드를 설계해주는 경우도 있다. 그런 경우는 4번 명령을 하지 않아도 된다.)
     4번 명령) OOO의 기능을 하는 코드를 설계해주세요.(여기서 OOO의 기능을 프롬프트 템플릿을 제시하여 제공할 수 있지만, 이번 챕터에서는 대화로 원하는 코드를 받아 보는 것을 목적으로 한다. 코드 출력 후 IDE프로그램을 활용하여 테스트를 해 본다. 이후 잘못된 줄(라인)의 수정을 요청하며 원하는 코드로 수렴해 가는 작업을 거친다.)
     5번 명령) 코드에 사용하고 싶은 파이썬 문법을 명확하게 설명해준다.
     6번 명령) x라인 부분을 OOO하게 수정해주세요.
@@ -220,9 +220,88 @@ print(list)
     ```
   - GPT생성 코드(3번 명령까지)
     ```
-   
+    from microbit import *
+    import random
+    
+    # 원소 주기율표 데이터 (1번부터 5번까지만 포함)
+    elements = {
+        1: "H",
+        2: "He",
+        3: "Li",
+        4: "Be",
+        5: "B"
+    }
+    
+    # 게임 초기화
+    def initialize_game():
+        display.scroll("Guess the Element")
+        sleep(1000)
+    
+    # 게임 실행
+    def run_game():
+        target_element = random.randint(1, 5)  # 랜덤한 원소 선택
+        display.show(str(target_element))  # 목표 원소 번호 표시
+        sleep(1000)
+        display.clear()
+    
+        while True:
+            if button_a.was_pressed() or button_b.was_pressed():
+                guessed_element = int(input("Enter your guess (1-5): "))
+                if guessed_element == target_element:
+                    display.show("Correct!")
+                else:
+                    display.show("Incorrect")
+                sleep(2000)
+                display.clear()
+                run_game()
+    
+    # 게임 시작
+    initialize_game()
+    run_game()
     ```
-  - GPT생성 코드(4번 명령까지)
+
+   - GPT생성 코드(5번 명령까지)
     ```
-   
+    from microbit import *
+    import random
+    
+    # 원소 데이터 (키: 원소 이름, 값: 원소 번호)
+    elements = {
+        "H": 1,
+        "He": 2,
+        "Li": 3,
+        "Be": 4,
+        "B": 5
+    }
+    
+    # 게임 초기화
+    def initialize_game():
+        display.scroll("Guess the Element Number")
+        sleep(1000)
+    
+    # 게임 실행
+    def run_game():
+        element_name = random.choice(list(elements.keys()))  # 랜덤한 원소 선택
+        target_number = elements[element_name]  # 목표 원소 번호
+        display.scroll("Element: " + element_name)
+        sleep(1000)
+        display.clear()
+        
+        # 사용자에게 원소 번호를 묻는 문제 출력
+        print("What is the number of the element '{}'?".format(element_name))
+        guessed_number = int(input("Enter your guess: "))
+    
+        # 정답 확인 및 표시
+        if guessed_number == target_number:
+            display.show(Image.HEART)
+        else:
+            display.show(Image.NO)
+        
+        sleep(2000)
+        display.clear()
+        run_game()
+    
+    # 게임 시작
+    initialize_game()
+    run_game()
     ```
