--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -5,8 +5,15 @@
 ```
 ```
 ### 실습제목입력
-* 샘플코드_02
+* 피보나치 수열 코드
 ```
+def fib(n): 
+     a, b = 0, 1
+     while a < n:
+         print(a, end=' ')
+         a, b = b, a+b
+     print()
+fib(2000)
 ```
 
 ### 실습제목입력
